[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[node name="Main" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="send" type="Button" parent="."]
margin_left = 153.0
margin_top = 202.0
margin_right = 196.0
margin_bottom = 222.0
text = "send"

[node name="create" type="Button" parent="."]
margin_left = 264.0
margin_top = 212.0
margin_right = 316.0
margin_bottom = 232.0
text = "create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 409.0
margin_top = 202.0
margin_right = 445.0
margin_bottom = 222.0
text = "join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="text_edit" type="TextEdit" parent="."]
margin_left = 159.073
margin_top = 58.3089
margin_right = 388.073
margin_bottom = 154.309
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ip" type="Label" parent="."]
margin_left = 93.0496
margin_top = 32.3089
margin_right = 133.05
margin_bottom = 46.3089

[node name="my_num" type="Label" parent="."]
margin_left = 439.0
margin_top = 37.877
margin_right = 571.0
margin_bottom = 92.877
__meta__ = {
"_edit_use_anchors_": false
}

[node name="their_num" type="Label" parent="."]
margin_left = 438.0
margin_top = 115.0
margin_right = 583.0
margin_bottom = 178.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
